hard-gists/bc901de8b7e59cbeb190/run.log
=== Docker Run Log for bc901de8b7e59cbeb190 ===
Started at: Mi 29. Okt 19:38:21 CET 2025

[2025-10-29 19:38:31] START: Running container for bc901de8b7e59cbeb190
[2025-10-29 19:38:31] SUCCESS: Container 789a0d44c015c250e98012a4ae3f19b8f08271d3aea671169e75de9e71d96ff1 started for bc901de8b7e59cbeb190
=== Container logs for bc901de8b7e59cbeb190 ===
Traceback (most recent call last):
  File "/snippet.py", line 1, in <module>
    import webapp2
  File "/usr/local/lib/python3.11/site-packages/webapp2.py", line 571
    except Exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for bc901de8b7e59cbeb190 ===
[2025-10-29 19:38:33] INFO: Container 789a0d44c015c250e98012a4ae3f19b8f08271d3aea671169e75de9e71d96ff1 has stopped
